--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # See https://www.dartlang.org/tools/private-files.html
 
 # Files and directories created by pub
@@ -25,3 +26,15 @@ doc/api/
 # Don't commit pubspec lock file 
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
+
+.DS_Store
+.atom/
+.idea
+.packages
+.pub/
+build/
+ios/.generated/
+packages
+pubspec.lock
+.flutter-plugins
+
